--- a/src/App.scss
+++ b/src/App.scss
@@ -172,6 +172,7 @@ body {
   margin: 0;
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
+  font-family: "Archia";
 }
 
 h1 {
@@ -204,7 +205,7 @@ h4 {
 
 h5 {
   font-family: "archia";
-  font-size: 12px !important;
+  font-size: 15px !important;
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -245,11 +246,15 @@ h6 {
   }
 
   .home-left {
-    width: 30%;
+    width: 25%;
   }
 
   .home-right {
-    width: 70%;
+    width: 75%;
+
+    .small-width {
+        width: 40rem;
+    }
   }
 }
 
@@ -537,6 +542,40 @@ h6 {
   }
 }
 
+.email {
+  display: flex;
+
+  .email-left {
+    width: 85%;
+  }
+
+  .email-right {
+    width: 15%;
+    background: $green-light;
+    position: relative;
+    color: $green;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
+    margin-bottom: 0.5rem;
+    flex: 1;
+    padding: 0.55rem;
+
+    h5 {
+        text-transform: unset;
+    }
+
+    h1,
+    h5,
+    h6,
+    h3 {
+      margin: 0;
+    }
+  }
+}
+
 .pagination {
   display: flex;
   flex-direction: row;
@@ -755,7 +794,7 @@ h6 {
 }
 
 .telegram {
-  width: 15.5rem;
+  width: 16.1rem;
   background: $gray-light !important;
   color: #08c !important;
   padding-left: 0.65rem;
@@ -2774,11 +2813,12 @@ select {
   .update {
     background: $gray-light;
     margin-bottom: 0.5rem;
-    padding: 0.5rem;
+    padding: 0.9rem;
     border-radius: 5px;
     transition: all 0.2s ease-in-out;
     &:hover {
       background: $gray-hover;
+      cursor: pointer;
     }
 
     h5,
@@ -2789,11 +2829,20 @@ select {
     h5 {
       color: $gray-mid;
       margin-bottom: 0.15rem;
+      text-transform: unset;
     }
 
     h4 {
       color: $gray;
-      font-weight: 600;
+      font-weight: 400;
+      text-transform: unset;
+    }
+
+    h2 {
+      padding: 0;
+      margin: 0;
+      margin-bottom: 0.2rem;
+      text-transform: unset;
     }
   }
 
