--- a/src/App.scss
+++ b/src/App.scss
@@ -635,6 +635,18 @@ h6 {
   justify-content: center;
 }
 
+.stream-details {
+  background: $gray-hover;
+  padding: 2%;
+  border-radius: 5px;
+
+  h6 {
+    padding: 0;
+    margin: 0;
+    text-transform: unset;
+  }
+}
+
 .Banner {
   display: flex;
   flex-direction: row;
@@ -671,6 +683,15 @@ h6 {
 .slider-label {
   margin: 0 5px;
   padding: 0;
+}
+
+.preview-mail {
+  display: flex;
+
+  h2 {
+    display: inline;
+    margin-left: 10px;
+  }
 }
 
 .Navbar {
